[package]
name = "wayback"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/PFAhard/wayback-rs"
description = "Rust version of tomnomnom/waybackurls"
categories = ["command-line-utilities"]
keywords = ["wayback", "archive", "backup", "reconre", "bug-bounty"]
license = "GPL-3.0"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.4", features = ["blocking","json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
